--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     background-color: #4CAF50;
     color: black;
     cursor: pointer;
-    transition: transform 0.2s ease; 
+    transition: transform 0.2s ease; /* ทำให้เวลาเปลี่ยนมันลื่น */
   }
   button:hover {
-    transform: scale(1.1); 
+    transform: scale(1.1); /* ขยายปุ่ม 10% ตอนเอาเมาส์ไปชี้ */
   }
   body {
   background-image: url("Boy.jpg");
